<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/massTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sideScreenMargin"
        android:layout_marginLeft="@dimen/sideScreenMargin"
        android:layout_marginTop="@dimen/topScreenMargin"
        android:text="@string/mass_kg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/betweenElementsMargin"
        android:text="@string/height_cm"
        app:layout_constraintStart_toStartOf="@+id/massEditText"
        app:layout_constraintTop_toBottomOf="@+id/massEditText" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/heightTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <EditText
        android:id="@+id/massEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/massTextView"
        app:layout_constraintTop_toBottomOf="@+id/massTextView" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/betweenElementsMargin"
        android:layout_marginRight="@dimen/sideScreenMargin"
        android:layout_marginEnd="@dimen/sideScreenMargin"
        android:text="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/heightEditText"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <TextView
        android:id="@+id/BMIValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_value"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countButton" />
</androidx.constraintlayout.widget.ConstraintLayout>